# podly

./: .env.local.example  AGENTS.md  Dockerfile  MODEL_PRICING.md  TODO.md  compose.yaml  package-lock.json  pyproject.toml
frontend/: package-lock.json  package.json
frontend/src/components/: FeedDetail.tsx  SegmentReviewModal.tsx  WaveformTimeline.tsx
frontend/src/hooks/: useWaveform.ts
frontend/src/services/: api.ts
frontend/src/types/: index.ts
src/: model_pricing.csv
src/app/: job_manager.py  jobs_manager.py  models.py
src/app/routes/: __init__.py  post_routes.py  segment_routes.py
src/migrations/versions/: 5cfd4fc88067_initial_schema.py  add_segment_review_functionality.py
src/podcast_processor/: ad_classifier.py  audio.py  audio_processor.py  cache_utils.py  model_pricing.py  podcast_processor.py  prompt.py  segment_manager.py  transcribe.py
src/shared/: config.py
src/tests/: conftest.py  test_ad_classifier.py  test_audio_processor.py  test_glm_custom_pricing.py  test_posts.py  test_prompt.py  test_segment_manager.py
